--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   },
   "scripts": {
     "artifacts": "napi artifacts",
-    "build": "napi build --platform --release --js false",
-    "build:debug": "napi build --platform --js false",
+    "build": "napi build --platform --release --js false --dts napi.type",
+    "build:debug": "napi build --platform --js false --dts napi.type",
     "prepublishOnly": "napi prepublish -t npm",
     "test": "ava",
     "universal": "napi universal",
