--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -449,3 +449,26 @@ jobs:
           name: bindings-universal-apple-darwin
           path: ${{ env.APP_NAME }}.*.node
           if-no-files-found: error
+  trigger_release:
+    runs-on: ubuntu-latest
+    needs:
+      - build-freebsd
+      - test-macOS-windows-binding
+      - test-linux-x64-gnu-binding
+      - test-linux-x64-musl-binding
+      - test-linux-aarch64-gnu-binding
+      - test-linux-aarch64-musl-binding
+      - test-linux-arm-gnueabihf-binding
+      - universal-macOS
+    steps:
+      - name: Trigger release
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const res = await github.rest.repos.createDispatchEvent({
+              owner: 'cherishs001',
+              repo: 'kaishens-cn/snowflake',
+              event_type: 'run-release'
+            });
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
