--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,8 +5,11 @@ env:
   MACOSX_DEPLOYMENT_TARGET: '10.13'
 'on':
   push:
+    tags:
+      - 'v*'
     branches:
       - main
+      - '!release-please--branches--main--components--standard-version'
     paths-ignore:
       - '**/*.md'
       - LICENSE
@@ -449,7 +452,8 @@ jobs:
           name: bindings-universal-apple-darwin
           path: ${{ env.APP_NAME }}.*.node
           if-no-files-found: error
-  trigger_release:
+  publish:
+    name: Publish
     runs-on: ubuntu-latest
     needs:
       - build-freebsd
@@ -461,14 +465,31 @@ jobs:
       - test-linux-arm-gnueabihf-binding
       - universal-macOS
     steps:
-      - name: Trigger release
-        uses: actions/github-script@v6
+      - uses: actions/checkout@v3
+      - name: Setup node
+        uses: actions/setup-node@v3
         with:
-          script: |
-            const res = await github.rest.repos.createDispatchEvent({
-              owner: 'cherishs001',
-              repo: 'kaishens-cn/snowflake',
-              event_type: 'run-release'
-            });
+          node-version: 18
+          check-latest: true
+          cache: yarn
+      - name: Install dependencies
+        run: yarn install
+      - name: Download all artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: artifacts
+      - name: Move artifacts
+        run: yarn artifacts
+      - name: List packages
+        run: ls -R ./npm
+        shell: bash
+      - name: Publish
+        run: |
+          echo "previous_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo '')" >> $GITHUB_ENV
+          echo "${{env.GITHUB_ENV}}"
+          if $env.GITHUB_ENV
+            echo "111"
+#          npm publish --access public
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
