--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -466,6 +466,9 @@ jobs:
       - universal-macOS
     steps:
       - uses: actions/checkout@v3
+      - name: Get version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       - name: Setup node
         uses: actions/setup-node@v3
         with:
@@ -484,12 +487,15 @@ jobs:
         run: ls -R ./npm
         shell: bash
       - name: Publish
+        uses: actions/create-release@v1
         run: |
-          echo "previous_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo '')" >> $GITHUB_ENV
-          echo "${{env.GITHUB_ENV}}"
-          if $env.GITHUB_ENV
-            echo "111"
+          echo "$tag_name"
 #          npm publish --access public
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        with:
+          tag_name: ${{ steps.get_version.outputs.VERSION }}
+          release_name: ${{ steps.get_version.outputs.VERSION }}
+          draft: false
+          prerelease: false
