--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,9 +7,8 @@ env:
   push:
     tags:
       - 'v*'
-    branches:
-      - main
-      - '!release-please--branches--main--components--standard-version'
+    branches-ignore:
+      - 'release-please--branches--main--components--standard-version'
     paths-ignore:
       - '**/*.md'
       - LICENSE
@@ -485,7 +484,17 @@ jobs:
         shell: bash
       - name: Publish
         run: |
-          echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+          if ${GITHUB_REF#refs/tags/} | grep "^[0-9]\+\.[0-9]\+\.[0-9]\+$";
+          then
+            echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+            npm publish --access public
+          elif ${GITHUB_REF#refs/tags/} | grep "^[0-9]\+\.[0-9]\+\.[0-9]\+";
+          then
+            echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+            npm publish --tag next --access public
+          else
+            echo "Not a release, skipping publish"
+          fi
 #          npm publish --access public
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
